--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-NYT_API_KEY="ENTER YOUR KEY HERE"
-TMDB_API_KEY="ENTER YOUR KEY HERE"
+NYT_API_KEY="wxbeJdLiAVFxEM6G79oBiz3dfNL9Q7fu"
+TMDB_API_KEY="21702750fc7cf6feab0f923eef2c6f3f"
